--- a/package.json
+++ b/package.json
@@ -10,16 +10,10 @@
         "Programming Languages"
     ],
     "contributes": {
-        "languages": [{
-            "id": "qmap",
-            "aliases": ["qmap", "qmap"],
-            "extensions": [""],
-            "configuration": "./language-configuration.json"
-        }],
         "grammars": [{
-            "language": "qmap",
-            "scopeName": ".qmp",
-            "path": "./syntaxes/qmap.tmLanguage.json"
+            "scopeName": "source.qmap.injection",
+            "path": "./syntaxes/qmap.tmLanguage.json",
+            "injectTo": ["source.js"]
         }]
     }
 }
