feat: 🎸 support more sources

--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
         "grammars": [{
             "scopeName": "source.qmap.injection",
             "path": "./syntaxes/qmap.tmLanguage.json",
-            "injectTo": ["source.js"]
+            "injectTo": [
+                "source.js",
+                "source.ts",
+                "source.js.jsx",
+                "source.tsx"
+            ]
         }]
     }
 }
