--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "displayName": "qmap",
     "description": "highlight qmap language in template literals",
     "version": "0.0.1",
+    "repository": {
+      "url": "https://github.com/gbenm/qmap-vscode.git",
+      "type": "git"
+    },
     "engines": {
         "vscode": "^1.68.0"
     },
